deleted nodemodules and reinstalled to fix error
