# routes/contacts.js
@@ -6,7 +6,7 @@ const contactsController = require('../controllers/contacts');
 router.get('/', contactsController.getData);
 
 router.get('/:id', contactsController.getPeiceOfData);
-router.put('/:id', contactsController.createContact);
+router.post('/:id', contactsController.createContact);
 router.put('/:id', contactsController.updateContact);
 router.delete('/:id', contactsController.deleteContact);
 
