# routes/index.js
@@ -1,6 +1,8 @@
 const express = require('express');
 const router = express.Router();
+const contactInfo = require('../controllers/contacts.js');
 
-router.use('/contacts', require('./contacts'))
+// use contacts.js file to make multiple routes
+router.use('/contacts', require('./contacts'));
 
 module.exports = router;
